fixed issues with inventory item alignment when on really large screen

--- a/src/pages/CharacterManagement/CharacterSheet.scss
+++ b/src/pages/CharacterManagement/CharacterSheet.scss
@@ -144,7 +144,7 @@
 
 /* Tabbed Content Actions and Inventory */
 .actions-and-Inventory {
-  width: 45rem;
+  width: 50rem;
 
   /* Scrollbar Styles */
   /* width */
