--- a/src/pages/CharacterManagement/components/Inventory/Weapon.scss
+++ b/src/pages/CharacterManagement/components/Inventory/Weapon.scss
@@ -107,7 +107,6 @@
 }
 
 .weapon-component:nth-child(even) {
-  justify-content: center;
   align-items: center;
   background: #33333344;
 }
